Numbers Unit Tests & Refactoring Extension Methods
Separated all Numbers extension methods into static methods in NumbersLibrary, and set all extension methods in a separate namespace. Completed unit tests for NumbersLibrary and the extensions methods.

--- a/MPT.Math/MPT.Math.csproj
+++ b/MPT.Math/MPT.Math.csproj
@@ -13,6 +13,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Algebra\bin\**" />
+    <EmbeddedResource Remove="Algebra\bin\**" />
+    <None Remove="Algebra\bin\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Coordinates3D\EllipsoidCoordinate.cs" />
     <Compile Remove="Point.cs" />
     <Compile Remove="Vectors\VectorPolar.cs" />
