--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jobs:
   include:
     - dotnet: 3.1.300
       mono: none
-      env: DOTNETCORE=3  # optional, can be used to take different code paths in your script
+      #env: DOTNETCORE=3  # optional, can be used to take different code paths in your script
     - mono: latest
 install:
   - dotnet restore
