--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ language: csharp
 solution: MPT.Math.sln
 jobs:
   include:
-    - dotnet: 3.1.300
+    #- dotnet: 3.1.300
+    - dotnet: 2.1.502
       mono: none
+      env: DOTNETCORE=2  # optional, can be used to take different code paths in your script
       #env: DOTNETCORE=3  # optional, can be used to take different code paths in your script
     - mono: latest
 install:
