--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,11 @@ version: 1.0.{build}
 # Do not build on tags (GitHub and BitBucket)
 skip_tags: true
 
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
 #---------------------------------#
 #    environment configuration    #
 #---------------------------------#
@@ -68,12 +73,13 @@ before_build:
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
-  - choco install "msbuild-sonarqube-runner" -y
-  - cmd: ./.build_script.cmd
-  - SonarScanner.MSBuild.exe begin /k:"MarkPThomas_MPT.SE.CrossSection-.netCore" /n:"MarkPThomas_MPT.SE.CrossSection-.netCore" /v:"1.0" /o:"markpthomas-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="751c7e83861178a7af7cb29f1443f48f076ac5d0" /d:sonar.cs.opencover.reportsPaths=".\results.xml"
-  - msbuild .\MPT.Math.sln /t:Rebuild
-  - cmd: ./.after_test.cmd
-  - SonarScanner.MSBuild.exe end /d:"sonar.login=751c7e83861178a7af7cb29f1443f48f076ac5d0"
+  - dotnet build -c Release
+#  - choco install "msbuild-sonarqube-runner" -y
+#  - cmd: ./.build_script.cmd
+#  - SonarScanner.MSBuild.exe begin /k:"MarkPThomas_MPT.SE.CrossSection-.netCore" /n:"MarkPThomas_MPT.SE.CrossSection-.netCore" /v:"1.0" /o:"markpthomas-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="751c7e83861178a7af7cb29f1443f48f076ac5d0" /d:sonar.cs.opencover.reportsPaths=".\results.xml"
+#  - msbuild .\MPT.Math.sln /t:Rebuild
+#  - cmd: ./.after_test.cmd
+#  - SonarScanner.MSBuild.exe end /d:"sonar.login=751c7e83861178a7af7cb29f1443f48f076ac5d0"
 
 # to disable automatic builds
 #build: off
