--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: trusty
 language: csharp
 mono: none
 #solution: MPT.Math.sln
-dotnet: 3.1.300
+dotnet: 3.1.201 #300
 #install:
 #  - dotnet restore
   
