--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: csharp
 mono: none
 #solution: MPT.Math.sln
 dotnet: 3.1.201 #300
-#install:
-#  - dotnet restore
+install:
+  - dotnet restore
   
 script:
-  - dotnet build MPT.Math/MPT.Math.csproj
-  - dotnet test MPT.Math.UnitTests/MPT.Math.UnitTests.csproj
+  - dotnet build MPT.Math/MPT.Math.csproj -f netcoreapp3.1
+  - dotnet test MPT.Math.UnitTests/MPT.Math.UnitTests.csproj -f netcoreapp3.1
