Travis & AppVeyor setup

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,10 +29,10 @@ image: Visual Studio 2019
 
 # environment variables
 environment:
-  COVERALLS_REPO_TOKEN:
-    secure: U6PTNVHFEk9HwMVJUM5sP8uOhINScFDjE # AftoKDQ4EreVjaFeRW/l/qo3Nza59mPmvcDnWQwPCIx5R8m0X1nAH/Imye4Nteq/
-  SONARQUBE:
-    secure: 20SN5KTeMrw/ROlDr08KTCYaEkdvxDbMxzihANB+sqa7nEj6vxGNM27ecL0BzHDU
+#  COVERALLS_REPO_TOKEN:
+#    secure: U6PTNVHFEk9HwMVJUM5sP8uOhINScFDjE # AftoKDQ4EreVjaFeRW/l/qo3Nza59mPmvcDnWQwPCIx5R8m0X1nAH/Imye4Nteq/
+#  SONARQUBE:
+#    secure: 20SN5KTeMrw/ROlDr08KTCYaEkdvxDbMxzihANB+sqa7nEj6vxGNM27ecL0BzHDU
 
 #---------------------------------#
 #       build configuration       #
