--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,7 +74,7 @@ before_build:
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
-  - dotnet build -c Debug
+#  - dotnet build -c Debug
 #  - choco install "msbuild-sonarqube-runner" -y
   - cmd: ./.build_script.cmd
 #  - SonarScanner.MSBuild.exe begin /k:"MarkPThomas_MPT.SE.CrossSection-.netCore" /n:"MarkPThomas_MPT.SE.CrossSection-.netCore" /v:"1.0" /o:"markpthomas-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="751c7e83861178a7af7cb29f1443f48f076ac5d0" /d:sonar.cs.opencover.reportsPaths=".\results.xml"
