Trying out xUnit

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,9 @@ dotnet_csproj:
   file: '**\*.csproj'
   version: '{version}'
   package_version: '{version}'
+  assembly_version: '{version}'
+  file_version: '{version}'
+  informational_version: '{version}'
 #---------------------------------#
 #    environment configuration    #
 #---------------------------------#
@@ -55,16 +58,17 @@ environment:
 #  - Debug
 #  - Release
 
+# scripts to run before build
+before_build:
+  - nuget restore #./MPT.Math.sln
+  
 build:
   #parallel: true                  # enable MSBuild parallel builds
   project: ./MPT.Math.sln      # path to Visual Studio solution or project
   
   # MSBuild verbosity level
-  #verbosity: quiet|minimal|normal|detailed
+  verbosity: minimal #quiet|minimal|normal|detailed
   
-# scripts to run before build
-before_build:
-  - nuget restore ./MPT.Math.sln
 
 # scripts to run *after* solution is built and *before* automatic packaging occurs (web apps, NuGet packages, Azure Cloud Services)
 #before_package:
@@ -74,12 +78,12 @@ before_build:
 
 # to run your custom scripts instead of automatic MSBuild
 build_script:
-#  - dotnet build -c Debug
+  - dotnet build -c Debug
 #  - choco install "msbuild-sonarqube-runner" -y
-  - cmd: ./.build_script.cmd
+#  - cmd: ./.build_script.cmd
 #  - SonarScanner.MSBuild.exe begin /k:"MarkPThomas_MPT.SE.CrossSection-.netCore" /n:"MarkPThomas_MPT.SE.CrossSection-.netCore" /v:"1.0" /o:"markpthomas-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="751c7e83861178a7af7cb29f1443f48f076ac5d0" /d:sonar.cs.opencover.reportsPaths=".\results.xml"
-  - msbuild ./MPT.Math.sln /t:Rebuild
-  - cmd: ./.after_test.cmd
+#  - msbuild ./MPT.Math.sln /t:Rebuild
+#  - cmd: ./.after_test.cmd
 #  - SonarScanner.MSBuild.exe end /d:"sonar.login=751c7e83861178a7af7cb29f1443f48f076ac5d0"
 
 # to disable automatic builds
@@ -126,8 +130,17 @@ build_script:
 #  - ps: Write-Host "script1"
 
 # to run your custom scripts instead of automatic tests
-#test_script:
-#  - dotnet test test/Qwack.Core.Tests/Qwack.Core.Tests.csproj
+test_script:
+  - ps: >-
+    nuget install xunit.runner.console -OutputDirectory packages -Version 2.4.1  
+    nuget install OpenCover -OutputDirectory packages -Version 4.6.519
+    dotnet tool install coveralls.net --version 1.0.0-beta0002 --tool-path tools
+    
+    .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:dotnet.exe "-targetargs:"".\packages\xunit.runner.console.2.4.1\tools\netcoreapp2.1\xunit.console.dll"" "".\MPT.Math.UnitTests\bin\Release\netcoreapp2.1\MPT.Math.UnitTests.dll"" -noshadow -appveyor" -filter:"+[MPT.Math*]*" -oldStyle -output:opencoverCoverage.xml
+    
+    $coveralls = ".\tools\csmacnz.coveralls.exe"
+    
+    & $coveralls --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
 
 # scripts to run after tests
 after_test:
