--- a/MPT.Math.xUnitTests/MPT.Math.xUnitTests.csproj
+++ b/MPT.Math.xUnitTests/MPT.Math.xUnitTests.csproj
@@ -5,7 +5,11 @@
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>netcoreapp2.1</TargetFramework>
+		<DebugType>full</DebugType>
+	</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
