--- a/MPT.Math.UnitTests/MPT.Math.UnitTests.csproj
+++ b/MPT.Math.UnitTests/MPT.Math.UnitTests.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
+	<DebugType>full</DebugType>
   </PropertyGroup>
-
+<PropertyGroup>
+  <DebugType>full</DebugType>
+</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
