--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ mono: none
 dotnet: 2.1.502  #3.0.0.300 #3.0.0.201 # For some reason .Net Core v3.1 is not working with Travis
 install:
 - dotnet restore
+- nuget install OpenCover -Version 4.6.519 -OutputDirectory testrunner
 script:
 - dotnet build MPT.Math/MPT.Math.csproj
 - dotnet test MPT.Math.UnitTests/MPT.Math.UnitTests.csproj
