--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=MarkPThomas_MPT.SE.CrossSection-.netCore
+sonar.projectKey=MarkPThomas_MPT.Math-.netCore
 sonar.organization=markpthomas-github
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=MPT.SE.CrossSection-.netCore
+#sonar.projectName=MPT.Math-.netCore
 #sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
