--- a/MPT.Math.UnitTests/MPT.Math.UnitTests.csproj
+++ b/MPT.Math.UnitTests/MPT.Math.UnitTests.csproj
@@ -8,6 +8,11 @@
 <PropertyGroup>
   <DebugType>full</DebugType>
 </PropertyGroup>
+<ItemGroup>
+  <Compile Remove="NewFolder\**" />
+  <EmbeddedResource Remove="NewFolder\**" />
+  <None Remove="NewFolder\**" />
+</ItemGroup>
   <ItemGroup>
     <PackageReference Include="Appveyor.TestLogger" Version="2.0.0" />
     <PackageReference Include="nunit" Version="3.12.0" />
@@ -23,10 +28,6 @@
     <Reference Include="nunit.framework">
       <HintPath>..\lib\nunit.framework.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
