--- a/MPT.Math/MPT.Math.csproj
+++ b/MPT.Math/MPT.Math.csproj
@@ -51,15 +51,9 @@
     <Compile Remove="Curves\Parametrics\Components\IParametricCylindrical.cs" />
     <Compile Remove="Curves\Parametrics\Components\IParametricLinear3D.cs" />
     <Compile Remove="Curves\Parametrics\Components\IParametricSpherical.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Hyperbolics\HyperbolicX.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Hyperbolics\HyperbolicXs.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Hyperbolics\HyperbolicXss.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Hyperbolics\HyperbolicY.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Hyperbolics\HyperbolicYs.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Hyperbolics\HyperbolicYss.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Parabolics\ParabolicCurveFocusParametric.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Parabolics\ParabolicFocusParametricX.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\Parabolics\ParabolicFocusParametricY.cs" />
+    <Compile Remove="Curves\Parametrics\ConicSectionCurves\ParabolicCurveFocusParametric.cs" />
+    <Compile Remove="Curves\Parametrics\ConicSectionCurves\ParabolicFocusParametricX.cs" />
+    <Compile Remove="Curves\Parametrics\ConicSectionCurves\ParabolicFocusParametricY.cs" />
     <Compile Remove="Curves\Parametrics\IParametricCartesian3D.cs" />
     <Compile Remove="Curves\Parametrics\IParametricCylindrical.cs" />
     <Compile Remove="Curves\Parametrics\IParametricLinear3D.cs" />
