Yet more renaming& reorganization

--- a/MPT.Math/MPT.Math.csproj
+++ b/MPT.Math/MPT.Math.csproj
@@ -51,14 +51,15 @@
     <Compile Remove="Curves\Parametrics\Components\IParametricCylindrical.cs" />
     <Compile Remove="Curves\Parametrics\Components\IParametricLinear3D.cs" />
     <Compile Remove="Curves\Parametrics\Components\IParametricSpherical.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\ParabolicCurveFocusParametric.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\ParabolicFocusParametricX.cs" />
-    <Compile Remove="Curves\Parametrics\ConicSectionCurves\ParabolicFocusParametricY.cs" />
+    <Compile Remove="Curves\Parametrics\ConicSectionCurveComponents\ParabolicCurveFocusParametric.cs" />
+    <Compile Remove="Curves\Parametrics\ConicSectionCurveComponents\ParabolicFocusParametricX.cs" />
+    <Compile Remove="Curves\Parametrics\ConicSectionCurveComponents\ParabolicFocusParametricY.cs" />
     <Compile Remove="Curves\Parametrics\IParametricCartesian3D.cs" />
     <Compile Remove="Curves\Parametrics\IParametricCylindrical.cs" />
     <Compile Remove="Curves\Parametrics\IParametricLinear3D.cs" />
     <Compile Remove="Curves\Parametrics\IParametricSpherical.cs" />
     <Compile Remove="Curves\CubicCurve.cs" />
+    <Compile Remove="Curves\Parametrics\ParabolicCurveFocusParametric.cs" />
     <Compile Remove="Curves\QuadraticCurve.cs" />
     <Compile Remove="Curves\Tools\Intersections\IntersectionCurveCurve.cs" />
     <Compile Remove="Curves\Tools\Intersections\IntersectionEllipticalElliptical.cs" />
